--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,9 @@
   </head>
   <body>
     <%= render "layouts/navigation" %>
-   <div class="container"> 
+    <%= render "layouts/message"%>
+    <div class="container">
     <%= yield %>
    </div>
   </body>
-</html>
+</html>%
