--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,7 @@ background-image: asset-url('background.jpg');
     font-size: 48px;
     font-weight: bold;
 }
+.listing{
+    list-style: none;
+    padding-left: 0%;
+}
