--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,8 +1,14 @@
-<h1>chef #{@chef.chefname}'s profile</h1>
 <div class="row">
     <div class="col-md-4 col-md-offset-4 center">
         <%= gravatar_for (@chef) %>
     </div>
+    <% if @chef.recipes.count !=0 %>
     <h4 align="center"><%= @chef.chefname %></h4>
     <%= render "recipes/recipe" , obj: @chef.recipes%>
+</div>
+<% else %>
+    <h4 align="center"><%= @chef.chefname %> has no recipes yet</h4>
+    <%= link_to "Edit Profile", edit_chef_path(@chef), class: "btn btn-info" %>
+    <%= link_to "back to recipes", recipes_path, class: "btn btn-info" %>
+<% end %>
 </div>
