--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -11,7 +11,7 @@
             </li>
             <li><samll><%= pluralize(ing.recipes.count,"recipe") if ing.recipes %></small></li>
         <% if logged_in? && current_chef.admin? %>
-        <li> <%=link_to "edit ingredient", ingredient_path(ing) %></li>
+        <li> <%=link_to "edit ingredient", edit_ingredient_path(ing) %></li>
         <% end %>
         </div>
     </div>
